Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 2.4.1:
============================

2020-06-12 Jose Kahan
	* configure.ac
	configure didn't signal an error if yacc was not installed

	* src/string.c
	parseurl(): URLs were not detected and converted when they were
	preceeded by a : that was not attached to a valid URL like
	foo: https://example.com or : https://example.com

2020-02-23 @cacsar
	* Makefile.in
	make install wasn't working

============================
HYPERMAIL VERSION 2.4.0:
============================

2019-12-20 Jose Kahan
	* src/getdate.y
	A message's sent or received date with a specified TZ but without any
	seconds value was using the local date seconds value instead of 00.

2019-12-19 Jose Kahan
	* src/parse.c
	parsemail(): a Content-Transfer-Encoding header with a missing value
	would result in an unitialized variable being used to output an unknown
	encoding warning message. Hypermail now skips this header if it's empty.

2019-11-22 Jose Kahan
	* src/print.c
	printsubject() / printdates(): the "by suject" and "by dates" views
	were not escaping markup present in mail's Suject and From headers.

2019-11-19 Jose Kahan
	* src/pcre
	Upgraded to upstream version 8.43. This fixes some autoconf issues we
	had on newer debian releases. This is only relevant for people that
	are not linking against a system libpcre.

	* tests/diff_hypermail_archives.pl
	Rewrote diff_hypermail.pl to make it more flexible and powerful for
	finding the differences in two hypermail archives.

2018-12-07 Jose Kahan
	* If the antispamdomain config option was used, hypermail was replacing
	everything following a "@" character by the antispam domain.  This fix
	makes antispamdomain only apply for the domain part of valid email
	addresses.

2018-11-29 Bill Shannon
	* string.c
	spamify_replacedomain(): fix another greedy "@" replacement in the
	middle of a string of iso-2022-jp encoded Japanese characters.
